test_suite/tests/ui/float/derive/ord_without_finite.stderr
error: To derive Ord trait on float-based type there must be validation that proves that inner value is not NaN.
       Consider adding:
           validate(finite)
 --> tests/ui/float/derive/ord_without_finite.rs:3:17
  |
3 | #[nutype(derive(Ord))]
  |                 ^^^
