test_suite/tests/ui/float/derive/ord_without_finite.rs
use nutype::nutype;

#[nutype(derive(Ord))]
pub struct Size(f32);

fn main() {}
